fix spacing issue on footer

--- a/app/src/styl/_layout.styl
+++ b/app/src/styl/_layout.styl
@@ -48,7 +48,7 @@ section.conteudo
 		flex-direction column
 		flex-grow 1
 		+below(bp)
-			padding-bottom 120px
+			padding-bottom 140px
 		
 	.insert
 		background #f3f0ef
